--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Cookie Stand</title>
 </head>
 <body>
-  
+  <header>
+    <h1>
+      Cookie Stand
+    </h1>
+  </header>
+  <script src="app.js"></script>
 </body>
 </html>
