added for loop for modifying li on HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <h1>
       Cookie Stand
     </h1>
+    <h4>
+      by Pat and Chester
+    </h4>
   </header>
+  <main>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
