--- a/sales.html
+++ b/sales.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Sales List</title>
+  </head>
+  <body>
+    <header>
+      <h1>Sales Per Store</h1>
+    </header>
+    <main id="main"></main>
+    <script src="app.js"></script>
+  </body>
 </html>
