--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,10 @@
     <header>
       <h1>Sales Per Store</h1>
     </header>
-    <main id="main"></main>
+    <main id="main">
+      <ul id="store">
+      </ul>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
