completed sales data portion

--- a/sales.html
+++ b/sales.html
@@ -10,9 +10,11 @@
     <header>
       <h1>Sales Per Store</h1>
     </header>
-    <main id="main">
-      <ul id="store">
-      </ul>
+    <main>
+      <div>
+        <p id="store"></p>
+        <ul></ul>
+      </div>
     </main>
     <script src="app.js"></script>
   </body>
