--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Cookie Stand</title>
-</head>
-<body>
-  <header>
-    <h1>
-      Cookie Stand
-    </h1>
-    <h4>
-      by Pat and Chester
-    </h4>
-  </header>
-  <main>
-  </main>
-  <script src="app.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Cookie Stand</title>
+  </head>
+  <body>
+    <header>
+      <h1>Cookie Stand</h1>
+      <h4>by Pat and Chester</h4>
+    </header>
+    <main></main>
+    <script src="app.js"></script>
+  </body>
 </html>
