--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <header>
-      <h1>Cookie Stand</h1>
-      <h4>by Pat and Chester</h4>
+      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="">
+      <h1>COOKIE STAND</h1>
     </header>
     <main></main>
     <script src="app.js"></script>
