updated store name to be h2 in lieu of p element

--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <header>
+      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="">
       <h1>Sales Per Store</h1>
     </header>
     <main>
