added function to display table head hours

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
   </head>
   <body>
     <header>
-      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="">
+      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="" />
       <h1>COOKIE STAND</h1>
     </header>
-    <main></main>
+    <main>
+      <table>
+        <thead id="table-head"></thead>
+        <tbody id="table-body"></tbody>
+        <tfoot id="table-footer"></tfoot>
+      </table>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
