--- a/sales.html
+++ b/sales.html
@@ -13,10 +13,11 @@
       <h1>Sales Per Store</h1>
     </header>
     <main>
-      <div>
-        <p id="store"></p>
-        <ul></ul>
-      </div>
+      <table>
+        <thead id="table-head"></thead>
+        <tbody id="table-body"></tbody>
+        <tfoot id="table-footer"></tfoot>
+      </table>
     </main>
     <script src="app.js"></script>
   </body>
