added caption to table

--- a/sales.html
+++ b/sales.html
@@ -14,6 +14,7 @@
     </header>
     <main>
       <table>
+        <caption>Sales per Hour at each Location</caption>
         <thead id="table-head"></thead>
         <tbody id="table-body"></tbody>
         <tfoot id="table-footer"></tfoot>
