added css to header and main

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index-style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,10 +16,27 @@
   <body>
     <header>
       <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="" />
-      <h1>COOKIE STAND</h1>
+      <h1>Cookie Stand</h1>
     </header>
     <main>
-      
+      <hr />
+      <div id="link">
+        <a href="sales.html">Click Here for Sales</a>
+      </div>
+      <div id="cards">
+        <div class="card">
+          <h2>Stores</h2>
+          <ul>
+            <li>Seattle</li>
+            <li>Tokyo</li>
+            <li>Dubai</li>
+            <li>Paris</li>
+            <li>Lima</li>
+          </ul>
+        </div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
     </main>
   </body>
 </html>
