added link to homepage on sales.html

--- a/sales.html
+++ b/sales.html
@@ -13,6 +13,10 @@
       <h1>Sales Per Store</h1>
     </header>
     <main>
+      <hr />
+      <div id="link">
+        <a href="index.html">Click Here for Homepage</a>
+      </div>
       <table>
         <caption>Sales per Hour at each Location</caption>
         <thead id="table-head"></thead>
