added random store address

--- a/index.html
+++ b/index.html
@@ -26,13 +26,38 @@
       <div id="cards">
         <div class="card">
           <h2>Stores</h2>
-          <ul>
-            <li>Seattle</li>
-            <li>Tokyo</li>
-            <li>Dubai</li>
-            <li>Paris</li>
-            <li>Lima</li>
-          </ul>
+          <ol>
+            <li>
+              Seattle <br />
+              1234 Elm Street <br />
+              Seattle, WA 98101 <br />
+              United States
+            </li>
+            <li>
+              Tokyo <br />
+              5678 Sakura Avenue <br />
+              Shibuya, Tokyo 150-1234 <br />
+              Japan
+            </li>
+            <li>
+              Dubai <br />
+              9876 Palm Road <br />
+              Jumeirah, Dubai 12345 <br />
+              United Arab Emirates
+            </li>
+            <li>
+              Paris <br />
+              2468 Rue de la Tour <br />
+              Paris 75001 <br />
+              France
+            </li>
+            <li>
+              Lima <br />
+              1357 Avenida del Sol <br />
+              Miraflores, Lima 18 <br />
+              Peru
+            </li>
+          </ol>
         </div>
         <div class="card"></div>
         <div class="card"></div>
