--- a/index.html
+++ b/index.html
@@ -28,40 +28,50 @@
           <h2>Stores</h2>
           <ol>
             <li>
-              Seattle <br />
+              <span>Seattle</span> <br />
               1234 Elm Street <br />
               Seattle, WA 98101 <br />
               United States
             </li>
             <li>
-              Tokyo <br />
+              <span>Tokyo</span> <br />
               5678 Sakura Avenue <br />
               Shibuya, Tokyo 150-1234 <br />
               Japan
             </li>
             <li>
-              Dubai <br />
+              <span>Dubai</span> <br />
               9876 Palm Road <br />
               Jumeirah, Dubai 12345 <br />
               United Arab Emirates
             </li>
             <li>
-              Paris <br />
+              <span>Paris</span> <br />
               2468 Rue de la Tour <br />
               Paris 75001 <br />
               France
             </li>
             <li>
-              Lima <br />
+              <span>Lima</span> <br />
               1357 Avenida del Sol <br />
               Miraflores, Lima 18 <br />
               Peru
             </li>
           </ol>
+          <h2>Hours: 6AM to 7PM</h2>
         </div>
         <div class="card"></div>
         <div class="card"></div>
       </div>
+      <div id="image-gallery">
+        <img src="./img/chinook.jpg" alt="">
+        <img src="./img/cutter.jpeg" alt="">
+        <img src="./img/family.jpg" alt="">
+        <img src="./img/fish.jpg" alt="">
+        <img src="./img/frosted-cookie.jpg" alt="">
+        <img src="./img/shirt.jpg" alt="">
+      </div>
     </main>
+    <script src="app2.js"></script>
   </body>
 </html>
