added objects literal for each store

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="link">
         <a href="sales.html">Click Here for Sales</a>
       </div>
-      <div id="cards">
+      <!-- <div id="cards">
         <div class="card">
           <h2>Stores</h2>
           <ol>
@@ -62,6 +62,9 @@
         </div>
         <div class="card"></div>
         <div class="card"></div>
+      </div> -->
+      <div id="store-card">
+        <div id="store"></div>
       </div>
       <div id="image-gallery">
         <img src="./img/chinook.jpg" alt="">
