started with js

--- a/index.html
+++ b/index.html
@@ -64,7 +64,12 @@
         <div class="card"></div>
       </div> -->
       <div id="store-card">
-        <div id="store"></div>
+        <div id="store">
+          <h2>Store Name: </h2>
+          <p>Address: </p>
+          <p>Phone: </p>
+          <p>Email: </p>
+        </div>
       </div>
       <div id="image-gallery">
         <img src="./img/chinook.jpg" alt="">
