completed css on both index and sales page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <div id="link">
         <a href="sales.html">Click Here for Sales</a>
       </div>
+      <div id="store-title">
+        <h2 id="store-list">Stores</h2>
+      </div>
       <div id="store-card"></div>
       <hr />
       <div>
