--- a/sales.html
+++ b/sales.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="">
-      <h1>Sales Per Store</h1>
+      <h1>Sales</h1>
     </header>
     <main>
       <hr />
