added comments to app-index.js

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
         </div>
       </div>
     </main>
-    <script src="app2.js"></script>
+    <script src="app-index.js"></script>
   </body>
 </html>
