--- a/sales.html
+++ b/sales.html
@@ -24,6 +24,6 @@
         <tfoot id="table-footer"></tfoot>
       </table>
     </main>
-    <script src="app.js"></script>
+    <script src="app-sales.js"></script>
   </body>
 </html>
