--- a/sales.html
+++ b/sales.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="sales-style.css">
+    <link rel="stylesheet" href="sales-style.css" />
     <title>Sales List</title>
   </head>
   <body>
     <header>
-      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="">
+      <img id="logo" src="./img/salmon.png" alt="Cookie Stand Logo" srcset="" />
       <h1>Sales</h1>
     </header>
     <main>
@@ -17,8 +17,36 @@
       <div id="link">
         <a href="index.html">Click Here for Homepage</a>
       </div>
+      <hr />
+      <form action="">
+        <fieldset>
+          <label for="store-name">Store Name: </label>
+          <input type="text" id="store-name" name="storeName" />
+          <label for="min-customer-per-hour">Min. Customer per Hour: </label>
+          <input
+            type="number"
+            id="min-customer-per-hour"
+            name="minCustomerPerHour"
+          />
+          <label for="max-customer-per-hour">Min. Customer per Hour: </label>
+          <input
+            type="number"
+            id="max-customer-per-hour"
+            name="maxCustomerPerHour"
+          />
+          <label for="avg-cookie-per-customer">Min. Customer per Hour: </label>
+          <input
+            type="number"
+            id="avg-cookie-per-customer"
+            name="avgCookiePerCustomer"
+          />
+        </fieldset>
+      </form>
+      <hr />
       <table>
-        <caption>Sales per Hour at each Location</caption>
+        <caption>
+          Sales per Hour at each Location
+        </caption>
         <thead id="table-head"></thead>
         <tbody id="table-body"></tbody>
         <tfoot id="table-footer"></tfoot>
