added function to grab values from form

--- a/sales.html
+++ b/sales.html
@@ -18,33 +18,33 @@
         <a href="index.html">Click Here for Homepage</a>
       </div>
       <hr />
-      <form action="">
+      <form id="add-store">
         <fieldset>
           <div>
             <label for="store-name">Store Name: </label>
             <input type="text" id="store-name" name="storeName" required/>
           </div>
           <div>
-            <label for="min-customer-per-hour">Min. Customer per Hour: </label>
+            <label for="min-customers-per-hour">Min Customer per Hour: </label>
             <input
               type="number"
-              id="min-customer-per-hour"
-              name="minCustomerPerHour"
+              id="min-customers-per-hour"
+              name="minCustomersPerHour"
               required
             />
           </div>
           <div>
-            <label for="max-customer-per-hour">Min. Customer per Hour: </label>
+            <label for="max-customers-per-hour">Max Customer per Hour: </label>
             <input
               type="number"
-              id="max-customer-per-hour"
-              name="maxCustomerPerHour"
+              id="max-customers-per-hour"
+              name="maxCustomersPerHour"
               required
             />
           </div>
           <div>
             <label for="avg-cookie-per-customer"
-              >Min. Customer per Hour:
+              >Avg Cookie per Customer:
             </label>
             <input
               type="number"
