updated code to remove footer

--- a/sales.html
+++ b/sales.html
@@ -22,7 +22,7 @@
         <fieldset>
           <div>
             <label for="store-name">Store Name: </label>
-            <input type="text" id="store-name" name="storeName" required/>
+            <input type="text" id="store-name" name="storeName" required />
           </div>
           <div>
             <label for="min-customers-per-hour">Min Customer per Hour: </label>
@@ -57,13 +57,13 @@
         </fieldset>
       </form>
       <hr />
-      <table>
+      <table id="table">
         <caption>
           Sales per Hour at each Location
         </caption>
         <thead id="table-head"></thead>
-        <tbody id="table-body"></tbody>
-        <tfoot id="table-footer"></tfoot>
+        <!-- <tbody id="table-body"></tbody> -->
+        <!-- <tfoot id="table-footer"></tfoot> -->
       </table>
     </main>
     <script src="app-sales.js"></script>
