cant get the new store row to append

--- a/sales.html
+++ b/sales.html
@@ -62,7 +62,7 @@
           Sales per Hour at each Location
         </caption>
         <thead id="table-head"></thead>
-        <!-- <tbody id="table-body"></tbody> -->
+        <tbody id="table-body"></tbody>
         <!-- <tfoot id="table-footer"></tfoot> -->
       </table>
     </main>
