fixed stores where paris was showing twice and added placeholder

--- a/sales.html
+++ b/sales.html
@@ -22,7 +22,13 @@
         <fieldset>
           <div>
             <label for="store-name">Store Name: </label>
-            <input type="text" id="store-name" name="storeName" required />
+            <input
+              type="text"
+              id="store-name"
+              name="storeName"
+              placeholder="Honolulu"
+              required
+            />
           </div>
           <div>
             <label for="min-customers-per-hour">Min Customer per Hour: </label>
@@ -30,6 +36,7 @@
               type="number"
               id="min-customers-per-hour"
               name="minCustomersPerHour"
+              placeholder="8"
               required
             />
           </div>
@@ -39,6 +46,7 @@
               type="number"
               id="max-customers-per-hour"
               name="maxCustomersPerHour"
+              placeholder="18"
               required
             />
           </div>
@@ -50,6 +58,7 @@
               type="number"
               id="avg-cookie-per-customer"
               name="avgCookiePerCustomer"
+              placeholder="8"
               required
             />
           </div>
